--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -360,7 +360,6 @@ en:
         description: Stores information about your session.
         planner: Stores session data
         planner_expiry: Expires after 24 hours
-
       google_analytics:
         title: Google Analytics
         description: Google Analytics  collects information about how you use the codebar website. This enables us to identify how busy the website is and possible improvements.
@@ -373,7 +372,53 @@ en:
       cloudflare:
         title: Cloudflare
         cfduid: Used to identify individual clients behind a shared IP address and apply security settings on a per-client basis.
-        cfduid_expiry: 1 year
+        cfduid_expiry: '1 year'
+    privacy_policy:
+      title: Privacy Policy
+      subtitle: Your privacy matters to us
+      p1: 'Your privacy means a lot to us, and we take it very seriously. We aim to be transparent with you about the data we collect about you and how it is used and shared. By signing up to our workshops you consent to our use of your data under this Privacy Policy. The document below has been created by codebar whose companies house registered name and address is as follows:'
+      address_html: '
+        codebar Ltd,<br/>
+        International House,<br/>
+        24 Holborn Viaduct,<br/>
+        London,<br/>
+        England,<br/>
+        EC1A 2BN<br/>
+        Company No. 10791813<br/>'
+      information:
+        title: 1. Information we collect
+        description: We do not share any of your information with any third parties without your consent. We also do not sell your contact information or use it for marketing purposes.
+        subscribing_html: '**1.1 Subscribing to an event**<br/>
+        We share your name with our host companies as we are required to provide a list with all attendee names when you subscribe to any of our events. We **do not share** your email address or any other personal information.'
+        cookies_html: '**1.2 Cookie Policy**<br/>
+        We use cookies to recognize you and your location. You can control cookies through your browser settings and other tools. For more information read our [cookie policy](/cookie_policy).'
+        usage_html:  '**1.3 How we use information we collect**<br/>
+        The legal basis on which we collect and process your data is “legitimate interest”. This is because we collect and store your data in order to process event information.'
+      your_rights:
+        title: 2. Your rights, choices and obligations
+        rights_html: '
+          **2.1 Your rights**<br/>
+          Data protection law provides you with rights in respect of personal data that we hold about you, including the right to request a copy of the personal data and request that we rectify, restrict or delete your data.
+          If you would like to exercise any of these rights please email us at company@codebar.io.
+          If you have a complaint about how we handle your data, please get in touch with us at company@codebar.io. If you are not happy about the way a complaint has been handled, you have the right to refer your complaint to the Information Commissioner’s Office.'
+        data_retention_html: '
+          **2.2 Data retention**<br/>
+          We will retain your data for as long as necessary to provide our services to you and fulfil transactions you have requested. If at any point you wish us to delete your data please email company@codebar.io.'
+        personal_data_access_html: '
+          **2.3 Right to Access and Control Your Personal Data**<br/>
+          You can request a copy of the data we hold about you, or request that we delete any data we hold on you. You can also ask us to correct, update or delete any inaccurate personal data that we hold about you. Just email us at company@codebar.io at any time.  We aim to process requests for data records or deletion within two weeks of receipt.'
+        access_and_portability_html: '
+          **2.4 Data Access and Portability**<br/>
+          You have the right to request a copy of the personal information we hold about you in a structured, electronic format. If you wish to receive a copy of the information we hold about you, please email company@codebar.io.'
+      security:
+        title: 3. Security
+        text: From time to time we implement and update administrative, technical, and physical security measures to help protect your information against unauthorised access, loss, destruction, or alteration. However, the Internet is not a 100% secure environment so we can’t guarantee the security of the transmission or storage of your information.
+      changes:
+        title: 4. Changes to this privacy policy
+        text: We reserve the right to modify this Privacy Policy at any time in accordance with this provision. If we make changes to this Privacy Policy, we will post the revised Privacy Policy on the codebar website. If you disagree with the revised Privacy Policy, you may ask us to remove your information from our systems pleas email company@codebar.io.
+      contact:
+        title: 5. Contact
+        text: If you have any questions or complaints about this Privacy Policy or our information handling practices, you may email us company@codebar.io stating 'Data inquiry' in the subject title.
 
   admin:
     dashboard:
