--- a/config/locales/en_GB.yml
+++ b/config/locales/en_GB.yml
@@ -108,20 +108,20 @@ en-GB:
       abuse: "We’re a fairly relaxed bunch and we trust you, so we don’t police students as to their eligibility. However if it ever looks like this is being abused we may have to change that – which we really don’t want to do."
       reminder: "So please remember what these workshops are for – to open up tech to people that are underrepresented in the industry."
     teacher_guide:
-      laptop: "You don't need a laptop for our workshops. You are there to watch and guide the students. If you don't feel comfortable with the tutorial you should spend time on it before coming if you want to help out."
+      laptop: "You don't need a laptop for our workshops. You are there to watch and guide the students. You shouldn't teach any tutorials that you don't feel comfortable with."
       keyboard: "Do not take over the keyboard! This can be off-putting and scary."
-      typing: "Encourage the students to type and not copy paste."
+      typing: "Encourage the students to type and not copy and paste."
       questions: "Explain that there are no dumb questions."
       mistakes: "Explain to students that it's OK to make mistakes."
-      introduction: "Always introduce yourself. Say why you want to help out and are spending your own time on this, why you like programming."
+      introduction: "Always introduce yourself. Say why you want to help out and are spending your own time on this, and why you like programming."
       backgrounds: "Give your students the opportunity to get to know each other. Ask their names, why they are here, what they do in their day jobs. Encourage a brief discussion before starting."
       limits: "Assume that anyone you're teaching has no knowledge but infinite intelligence."
-      colaboration: "Work collaboratively with your student. If you have two students, you should work with both. Don't focus all your attention on one of them."
+      colaboration: "Work collaboratively with your student. If you have two students, you should work with both. Don't focus all of your attention on one."
       discussion: "Let students have a go at answering the questions first. Help with open and leading questions. Encourage a discussion."
       talk_slow: "Take it slow, you are the teacher, they are the student. Allow for time between questions."
-      mild_approach: "Don't say no when the students are not doing something right. Be gentle, approach it in a mild way."
+      mild_approach: "Don't say no when the students are not doing something right. Be gentle, take a mild approach."
       paper: "Use pen and paper or go to a whiteboard! Often students are coming from a non-technical background. Drawing and explaining with visual material is really helpful."
-      stubling: "Let them stumble. We learn by making mistakes, getting frustrated, and working through problem in our own way. Be supportive, but let them explore."
+      stubling: "Let them stumble. We learn by making mistakes, getting frustrated, and working through problems in our own ways. Be supportive, but let them explore."
       suggestions: "Do you have something to suggest? Make a <a href='https://github.com/codebar/planner'>pull request</a> or <a href='https://github.com/codebar/planner/issues/new'>create an issue</a>"
   events:
     title: "Events"
