Spelt GitHub in the correct format

--- a/config/locales/en_US.yml
+++ b/config/locales/en_US.yml
@@ -185,7 +185,7 @@ en-US:
     sponsoring: "Sponsoring"
   members:
     sign_up: "Sign up"
-    sign_in_with_github: "Sign in with Github"
+    sign_in_with_github: "Sign in with GitHub"
     sign_up_as_student: "I understand and meet the eligibility criteria. Sign me up as a student"
     sign_up_as_coach: "Sign up as a coach"
     code_of_conduct: "code of conduct"
