spelling mistakes esp successfully
  * mainly effects the tests but also user messages and out to the
    translations
  * Note: submitted has been spelt wrongly but it also has a
    database table attribute spelt as 'submited' .... so I am
    leaving well alone in this commit
  * there are other spelling mistakes to review

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -438,8 +438,8 @@ fr:
         failure: "Workshop cannot be deleted. This is because it has invitees and/or workshop information is on the website for a while long enough that it cannot be deleted."
     messages:
       meeting:
-        created: 'Meeting succesfully created'
-        updated: 'You have succesfully updated the details of this meeting'
+        created: 'Meeting successfully created'
+        updated: 'You have successfully updated the details of this meeting'
         invitations_already_sent: 'Invitations were previously sent; they will not be sent again'
         sending_invitations: 'Invitations are being sent out'
       invitation:
