Fix: Spelling mistake in i18n

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -116,7 +116,7 @@ de:
       introduction: "Stelle dich immer vor. Erzähle, was dich zum ehrenamtlichen Helfen in deiner Freizeit motiviert und warum du das Programmieren magst."
       backgrounds: "Gib Deinen Lernenden die Gelegenheit, einander kennen zu lernen. Frage sie nach ihren Namen, warum sie gekommen sind, was sie beruflich machen. Rege zu Beginn eine kurze Diskussion an."
       limits: "Setze bei den Lernenden kein Wissen voraus, gehe aber davon aus, dass ihre Intelligenz und Fähigkeiten unbeschränkt sind."
-      colaboration: "Arbeite mit den Lernenden zusammen. Wenn du zwei Leute betreust, solltest du mit beiden arbeiten. Widme nicht deine ganze Aufmerksamkeit einer Einzelperson."
+      collaboration: "Arbeite mit den Lernenden zusammen. Wenn du zwei Leute betreust, solltest du mit beiden arbeiten. Widme nicht deine ganze Aufmerksamkeit einer Einzelperson."
       discussion: "Erlaube den Lernenden zunächst, Fragen eigenständig zu beantworten. Hilf ihnen mit erkenntnisleitenden Fragen. Rege eine Diskussion an."
       talk_slow: "Lass dir Zeit. Du bist der/die Lehrer/in, sie sind die Lernenden. Lege kurze Pausen zwischen Fragen ein."
       mild_approach: "Sage nicht rabiat \"Nein\", wenn die Lernenden etwas unrichtig machen. Gehe sanft und behutsam an das Problem heran."
