Adds year format to date & time in locales translation files

--- a/config/locales/en_GB.yml
+++ b/config/locales/en_GB.yml
@@ -11,6 +11,7 @@ en-GB:
       day_in_words: "%a"
       day: "%d"
       month: "%B"
+      year: "%Y"
       meeting_format: "%a %d %B %H:%M"
       time: "%H:%M"
       year_month: "%Y-%B"
@@ -30,6 +31,7 @@ en-GB:
       day_in_words: "%a"
       day: "%d"
       month: "%B"
+      year: "%Y"
       meeting_format: "%a %d %B %H:%M"
       time: "%H:%M"
       year_month: "%Y-%B"
