/s/no dumb questions/no bad questions
The word "dumb" has ableist roots.  The phrase "bad question" expresses
the same sentiment, but is less likely to make somebody feel uncomfortable.

--- a/config/locales/en_GB.yml
+++ b/config/locales/en_GB.yml
@@ -111,7 +111,7 @@ en-GB:
       laptop: "You don't need a laptop for our workshops. You are there to watch and guide the students. You shouldn't teach any tutorials that you don't feel comfortable with."
       keyboard: "Do not take over the keyboard! This can be off-putting and scary."
       typing: "Encourage the students to type and not copy and paste."
-      questions: "Explain that there are no dumb questions."
+      questions: "Explain that there are no bad questions."
       mistakes: "Explain to students that it's OK to make mistakes."
       introduction: "Always introduce yourself. Say why you want to help out and are spending your own time on this, and why you like programming."
       backgrounds: "Give your students the opportunity to get to know each other. Ask their names, why they are here, what they do in their day jobs. Encourage a brief discussion before starting."
