--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,9 @@ en:
       workshop_email_subject: "Regarding hosting a workshop"
     chapters:
       title: "Chapters"
+  workshop:
+    invitation:
+      title: Workshop invitation - %{date}
   messages:
     accepted_invitation: "Thanks for getting back to us %{name}. See you at the workshop!"
     rejected_invitation: "We are so sad you can't make it, but thanks for letting us know %{name}."
