--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -65,6 +65,7 @@ en:
     chapters:
       title: "Chapters"
   workshop:
+    title: Workshop at %{host} - %{date}
     invitation:
       title: Workshop invitation - %{date}
   messages:
