Localise invitation meeting messages

--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -75,6 +75,9 @@
     feedback_not_found: "You have already submitted feedback for this event."
     updated_note: "Successfully updated note."
     invitations:
+      meeting:
+        cancel: "Thanks for letting us know you can't make it."
+        rsvp: "Your RSVP was successful. We look forward to seeing you at the Monthly!"
       rsvped_to_other_workshop: "You have already RSVP'd to another workshop on this date. If you would prefer to attend this workshop, please cancel your other RSVP first."
       spot_confirmed: "Your spot has been confirmed for %{event}! We look forward to seeing you there."
       spot_not_confirmed: 'Your spot has not yet been confirmed. We will verify your attendance after you complete the questionnaire.'
