--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -75,6 +75,9 @@ de:
     feedback_not_found: "Sie haben bereits ein Feedback eingereicht."
     updated_note: "Aktualisierung erfolgreich."
     invitations:
+      meeting:
+        cancel: "Thanks for letting us know you can't make it."
+        rsvp: "Your RSVP was successful. We look forward to seeing you at the Monthly!"
       rsvped_to_other_workshop: "Du hast dich schon für einen anderen Workshop an diesem Datum angemeldet. Falls du an diesem Workshop teilnehmen möchtest, melde dich bitte zuerst von dem anderen Workshop ab."
       spot_confirmed: "Deine Teilnahme an %{event} wurde bestätigt! Wir freuen uns bereits dich dort begrüßen zu dürfen."
       spot_not_confirmed: 'Deine Teilnahme wurde noch nicht bestätigt. Wir werden die Teilnahme bestätigen sobald du das Formular ausgefüllt hast.'
