Localise accepting invitation blank note error

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -67,6 +67,7 @@ de:
       title: "Chapters"
   messages:
     accepted_invitation: "Vielen Dank für die Rückmeldung, %{name}. Wir sehen uns beim Workshop!"
+    error_blank_note: 'You must select a note'
     rejected_invitation: "Wir bedauern es sehr dass du nicht teilnehmen kannst. Vielen Dank für das Bescheid geben, %{name}."
     already_rsvped: "Du hast deine Teilnahme schon bestätigt!"
     not_attending_already: "Du hast bereits bestätigt, dass du nicht teilnehmen kannst."
