--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,6 +84,8 @@ en:
         subject: "Reminder: you're on the codebar waiting list (%{date_time})"
   workshop:
     title: Workshop at %{host} - %{date}
+    virtual:
+      title: Virtual workshop for %{chapter} - %{date}
     invitation:
       title: Workshop invitation - %{date}
   meeting:
@@ -166,6 +168,10 @@ en:
     already_attending: 'You are attending this event'
     on_waiting_list: You are on the waiting list.
     already_taken_place: This event has already taken place.
+    virtual:
+      title: 'Virtual workshop for %{chapter}'
+      lead: 'Participate in our workshops to learn programming in a supportive and collaborative online environment at your own pace, or share your knowledge and coach our students.'
+      intro: 'Our virtual workshops take place online. Our aim is to help you get started with programming by pairing you with a coach that will be able to remotely assist and guide you through what you want to learn. Once you sign up we will email you more details about how to join the workshop and tools that we reccomend to make the process easier for you. In the meantime if you have any questions, do not hesitate to send an email to %{chapter_email}.'
   events:
     title: "Events"
     past: "Past"
