(fix) workshop update method can handle workshop without host
- extract controller message to locale
- fix broken spec

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -550,6 +550,7 @@ en:
         update_rsvp: 'Updated attendance of %{name}'
       workshop:
         created: 'Workshop successfully created'
+        updated: 'Workshop successfully updated'
   simple_form:
     placeholders:
       member:
